[gd_scene load_steps=3 format=3 uid="uid://dxqfldhgq8otb"]

[ext_resource type="Script" uid="uid://bmjbtqkfy1f3s" path="res://UI/victory_screen.gd" id="1_victory"]

[sub_resource type="LabelSettings" id="LabelSettings_vpwkf"]
font_size = 34

[node name="VictoryScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_victory")

[node name="Background" type="ColorRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.05, 0.3, 0.95)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="VictoryLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "VICTORY!"
label_settings = SubResource("LabelSettings_vpwkf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpaceLabel2" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = " "

[node name="TimeLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "You survived: X minutes Y seconds"
horizontal_alignment = 1

[node name="SpaceLabel3" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = " "

[node name="StatsContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="ExpLabel" type="Label" parent="CenterContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Experience Gained: 0"
horizontal_alignment = 1

[node name="SpaceLabel4" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = " "

[node name="ButtonContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayAgainButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Play Again"

[node name="MainMenuButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Main Menu"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Quit Game"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonContainer/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonContainer/QuitButton" to="." method="_on_quit_button_pressed"]
